Deleting what isn't specific to the heatmap

--- a/public/stylesheets/gm-heatmap.css
+++ b/public/stylesheets/gm-heatmap.css
@@ -1,4 +1,4 @@
-/* This stylesheet is pulled in by the gm1.user.js greasemonkey script to style the in-place live counts stuff */
+/* This stylesheet is pulled in by the heatmap.user.js greasemonkey script to style the in-place live counts stuff */
 
 .greasy-heatmap {
     position: absolute;
